--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Tigim Insight
 description: about Technology
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/tigim.png
+#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/tigim.png
 
 #
 # Flags below are optional
