--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,13 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
+#markdown: kramdown
+#kramdown:
+#  input: GF M
 markdown: redcarpet
+redcarpet:
+ extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+
 highlighter: pygments
 permalink: /:title/
 
