--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ redcarpet:
  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
 highlighter: pygments
-permalink: /:title/
+#permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
@@ -82,3 +82,4 @@ exclude:
 
 # Pagination
 paginate: 5
+paginate_path: "/page:num/"
