--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: /images/tigim.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: plenum@naver.com
+  email: contact@tigiminsight.com
   facebook:
   flickr:
   github:
