--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ baseurl: ""
 #redcarpet:
 # extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
-highlighter: pygments
+#highlighter: pygments
 #permalink: /:title/
 
 # The release of Jekyll Now that you're using
