--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Tigim Insight
 
 # Short bio or description (displayed in the header)
-description: Life of IT guy   
+description: Life of IT Enthusiast    
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 #avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -19,7 +19,7 @@ avatar: /images/tigim.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: contact@tigiminsight.com
+  email: plenum@naver.com
   facebook:
   flickr:
   github:
