--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,9 @@ navigation: True # show the navbar links
 subscribers: True # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
-twitter: tryghost # replace by your username
-facebook: ghost # replace by your username
+#twitter: tryghost # replace by your username
+#facebook: ghost # replace by your username
+linkedin: tigiminsight
 
 # Disqus
 disqus: True
@@ -69,13 +70,13 @@ feed:
 # or "master" otherwise
 safe: False
 lsi: False
-username: jekyller
-repo: jasper2
+username: supertigim
+repo: supertigim.github.io
 branch: master
-relative_source: ../jasper2/
-destination: ../jasper2-pages/
-production_url:  https://jekyller.github.io/jasper2/
-source_url:  https://github.com/jekyller/jasper2/
+relative_source: ../supertigim.github.io/
+destination: ../supertigim.github.io-pages/
+production_url:  https://supertigim.github.io/
+source_url:  https://github.com/supertigim/supertigim.github.io
 
 exclude:
   - assets/css
