--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,12 @@
+tigim:
+  username: tigim
+  name: Jong Yoon Kim
+  url_full: https://supertigim.github.io/about/
+  url: supertigim.github.io/about
+  bio: Software Engineer / Technical Project Manager / Technology Strategist / MBA
+  picture: assets/images/logo.png
+  linkedin: tigiminsight
+  cover: False
 ghost:
   username: ghost
   name: Ghost
