--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,14 @@ description: Life of IT Enthusiast
 cover: assets/images/blog-cover.jpg
 logo: assets/images/logo.png
 logo_dark: assets/images/logo.png
-favicon: assets/images/tigiminsight48x48.ico
+favicon: assets/images/tigim.png
 production_url: https://jekyller.github.io/jasper2/
 source_url: https://github.com/jekyller/jasper2/
 CNAME: www.tigiminsight.com
 
 # Social info
 navigation: True # show the navbar links
-subscribers: True # you need to connect an external service for this to work,
+subscribers: False # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
 #twitter: tryghost # replace by your username
