--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: /
 # Website info
 title: Tigim Insight
 description: Life of IT Enthusiast
-cover: assets/images/blog-cover.jpg
+cover: assets/images/minseo.jpg
 logo: assets/images/logo.png
 logo_dark: assets/images/logo.png
 favicon: assets/images/tigim.png
@@ -20,7 +20,7 @@ source_url: https://github.com/jekyller/jasper2/
 CNAME: www.tigiminsight.com
 
 # Social info
-navigation: True # show the navbar links
+navigation: False # show the navbar links
 subscribers: False # you need to connect an external service for this to work,
 # if 'True' the submit button is disabled for now, but you can change that
 # by editing `_includes/subscribe-form.html`
