--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 markdown: kramdown
 highlighter: rouge
-paginate: 100 # it will paginate after this number
+paginate: 10 # it will paginate after this number
 language: 'ko-kr'
 words_per_minute: 200
 
@@ -70,13 +70,13 @@ feed:
 # or "master" otherwise
 safe: False
 lsi: False
-username: supertigim
-repo: supertigim.github.io
+username: jekyller
+repo: jasper2
 branch: master
-relative_source: ../supertigim.github.io/
-destination: ../supertigim.github.io-pages/
-production_url:  https://supertigim.github.io/
-source_url:  https://github.com/supertigim/supertigim.github.io
+relative_source: ../jasper2/
+destination: ../jasper2-pages/
+production_url:  https://jekyller.github.io/jasper2/
+source_url:  https://github.com/jekyller/jasper2/
 
 exclude:
   - assets/css
