--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@ language: 'ko-kr'
 words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: /
+baseurl: '../'
 
 # Website info
 title: Tigim Insight
 description: Life of IT Enthusiast
-cover: assets/images/minseo.jpg
-logo: assets/images/logo.png
-logo_dark: assets/images/logo.png
+cover: /assets/images/minseo.jpg
+logo: /assets/images/logo.png
+logo_dark: /assets/images/logo.png
 favicon: /assets/images/tigim.png
-production_url: https://jekyller.github.io/jasper2/
+production_url: https://supertigim.github.io/
 source_url: https://github.com/jekyller/jasper2/
 CNAME: www.tigiminsight.com
 
